# CppServer

./: .appveyor.yml  .gitattributes  .gitignore  .gitlinks  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  annotated.html  asio_8cpp.html  asio_8cpp_source.html  asio_8h.html  asio_8h_source.html  asio_8inl.html  asio_8inl_source.html  asio_service_8cpp-example.html  asio_timer_8cpp-example.html  bus_8cpp.html  bus_8cpp_source.html  bus_8h.html  bus_8h_source.html  bus__server_8cpp.html  bus__server_8cpp_source.html  bus__server_8h.html  bus__server_8h_source.html  class_8cpp.html  class_8cpp_source.html  class_8h.html  class_8h_source.html  class_8inl.html  class_8inl_source.html  class_cpp_server_1_1_asio_1_1_allocate_handler-members.html  class_cpp_server_1_1_asio_1_1_allocate_handler.html  class_cpp_server_1_1_asio_1_1_handler_allocator-members.html  class_cpp_server_1_1_asio_1_1_handler_allocator.html  class_cpp_server_1_1_asio_1_1_handler_storage-members.html  class_cpp_server_1_1_asio_1_1_handler_storage.html  class_cpp_server_1_1_asio_1_1_rest_server-members.html  (+553 more)
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msvc.yml  build-windows-msys2.yml  build-windows-vs.yml  doxygen.yml
documents/: Doxyfile
examples/: asio_service.cpp  asio_service.h  asio_timer.cpp  bug.cpp  http_client.cpp  http_server.cpp  https_client.cpp  https_server.cpp  nanomsg_bus.cpp  nanomsg_bus_link.cpp  nanomsg_bus_node.cpp  nanomsg_bus_server.cpp  nanomsg_pair_client.cpp  nanomsg_pair_server.cpp  nanomsg_publisher_server.cpp  nanomsg_pull_server.cpp  nanomsg_push_client.cpp  nanomsg_push_server.cpp  nanomsg_reply_server.cpp  nanomsg_request_client.cpp  nanomsg_request_server.cpp  nanomsg_respondent_client.cpp  nanomsg_subscribe_client.cpp  nanomsg_subscribe_server.cpp  nanomsg_subscriber_client.cpp  nanomsg_survey_client.cpp  nanomsg_survey_server.cpp  nanomsg_surveyor_server.cpp  proto_client.cpp  proto_server.cpp  rest_http_server.cpp  restbed_http_server.cpp  restbed_https_server.cpp  ssl_chat_client.cpp  ssl_chat_server.cpp  tcp_chat_client.cpp  tcp_chat_server.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_server.cpp  (+25 more)
images/: multicast.ai
include/: version.h
include/server/: asio.h  version.h
include/server/asio/: asio.h  asio.inl  memory.h  memory.inl  rest.h  rest_server.h  service.h  ssl_client.h  ssl_client.inl  ssl_context.h  ssl_server.h  ssl_server.inl  ssl_session.h  ssl_session.inl  tcp_client.h  tcp_client.inl  tcp_resolver.h  tcp_server.h  tcp_server.inl  tcp_session.h  tcp_session.inl  timer.h  udp_client.h  udp_client.inl  udp_resolver.h  udp_server.h  udp_server.inl  web.h  web_client.h  web_server.h  web_ssl_client.h  web_ssl_server.h  websocket.h  websocket_client.h  websocket_server.h  websocket_server.inl  websocket_session.h  websocket_session.inl  websocket_ssl_client.h  websocket_ssl_server.h  (+3 more)
include/server/http/: http.h  http_client.h  http_request.h  http_request.inl  http_response.h  http_response.inl  http_server.h  http_session.h  https_client.h  (+2 more)
include/template/: class.h  class.inl  function.h
modules/: CMakeLists.txt  Catch2.cmake  CppBenchmark.cmake  CppCommon.cmake  asio.cmake  catch.cmake  cpp-optparse.cmake  nanomsg.cmake  restbed.cmake  websocketpp.cmake  websocketpp.patch
modules/OpenSSL/: MinGW.bat  Win32.bat  Win64.bat
performance/: http_trace_client.cpp  http_trace_server.cpp  https_trace_client.cpp  https_trace_server.cpp  nanomsg_echo_client.cpp  nanomsg_pair_client.cpp  nanomsg_pair_server.cpp  nanomsg_request_client.cpp  nanomsg_request_server.cpp  proto_client.cpp  proto_server.cpp  ssl_1_client.cpp  ssl_1_server.cpp  ssl_echo_client.cpp  ssl_echo_server.cpp  ssl_multicast_client.cpp  ssl_multicast_server.cpp  tcp_1_client.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_multicast_client.cpp  tcp_multicast_server.cpp  template_class.cpp  template_function.cpp  udp_1_client.cpp  udp_1_server.cpp  udp_echo_client.cpp  udp_echo_server.cpp  udp_multicast_client.cpp  udp_multicast_server.cpp  web_echo_client.cpp  web_echo_server.cpp  web_ssl_echo_client.cpp  web_ssl_echo_server.cpp  websocket_1_client.cpp  websocket_1_server.cpp  websocket_echo_client.cpp  websocket_echo_server.cpp  websocket_ssl_echo_client.cpp  websocket_ssl_echo_server.cpp  (+10 more)
proto/: fbe.cpp  fbe.h  fbe_models.cpp  fbe_models.h  fbe_models.inl  fbe_protocol.cpp  fbe_protocol.h  simple.cpp  simple.fbe  simple.h  simple_models.cpp  simple_models.h  simple_protocol.cpp  simple_protocol.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  defines_0.js  defines_2.js  enums_0.js  enums_2.html  enums_2.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+54 more)
source/template/: class.cpp  function.cpp
tests/: test.cpp  test.h  test_http.cpp  test_https.cpp  test_nanomsg_bus.cpp  test_nanomsg_pair.cpp  test_nanomsg_pubsub.cpp  test_nanomsg_push.cpp  test_nanomsg_pushpull.cpp  test_nanomsg_request.cpp  test_nanomsg_requestreply.cpp  test_nanomsg_subscribe.cpp  test_nanomsg_survey.cpp  test_proto.cpp  test_ssl.cpp  test_ssl_server.cpp  test_tcp.cpp  test_tcp_server.cpp  test_template_class.cpp  test_template_function.cpp  test_timer.cpp  test_udp.cpp  test_udp_multicast.cpp  test_udp_server.cpp  test_web.cpp  test_web_http_server.cpp  test_web_https_server.cpp  test_web_ssl.cpp  test_web_ssl_server.cpp  test_websocket.cpp  test_websocket_server.cpp  test_websocket_ssl.cpp  test_websocket_ssl_server.cpp  test_ws.cpp  test_wss.cpp
tools/certificates/: dh2048.pem  generate.bat  root.crt  root.key  root.srl  server.crt  server.csr  server.key  server.pem
www/api/: .gitignore  openapi.yaml
www/ws/: index.html
www/wss/: index.html
(+1749 files in other folders)
